# love-AI-agent

./: README.md
fuck-rust-day-by-day/: .gitignore  Cargo.toml
fuck-rust-day-by-day/docs/: _2025_12_24_fuck.md  _2025_12_25_fuck.md  _2025_12_25_fuck_optimize.md  _2025_12_26_fuck.md  _2026_01_02_fuck.md  _2026_01_03_fuck.md  _2026_01_05_fuck.md  _2026_01_07_fuck.md  _2026_01_20_fuck.md
fuck-rust-day-by-day/mydb_ex2/: 000008.sst  IDENTITY  LOG  LOG.old.1768786449386766  MANIFEST-000010
fuck-rust-day-by-day/mydb_ex3/: 000008.sst  IDENTITY  LOG  LOG.old.1768786449386577  MANIFEST-000010  OPTIONS-000007
fuck-rust-day-by-day/myeb_ex1/: 000008.sst  000013.sst  000018.sst  IDENTITY  LOG  LOG.old.1768785190771600  LOG.old.1768785290464661  LOG.old.1768786449386654  MANIFEST-000020
fuck-rust-day-by-day/src/: _2025_12_24_fuck.rs  _2025_12_25_fuck.rs  _2025_12_25_fuck_optimize.rs  _2025_12_25_fuck_optmize.rs  _2025_12_26_fuck.rs  _2025_12_27_fuck.rs  _2025_12_30_fuck.rs  _2025_12_31_fuck.rs  _2026_01_02_fuck.rs  _2026_01_03_fuck.rs  _2026_01_04_fuck.rs  _2026_01_05_fuck.rs  _2026_01_06_fuck.rs  _2026_01_07_fuck.rs  _2026_01_08_fuck.rs  _2026_01_09_fuck.rs  _2026_01_10_fuck.rs  _2026_01_11_fuck.rs  _2026_01_14_fuck.rs  _2026_01_15_fuck.rs  _2026_01_16_fuck.rs  _2026_01_18_fuck.rs  _2026_01_19_fuck.rs  _2026_01_20_fuck.rs  _2026_01_31_fuck.rs  _2026_02_01_fuck.rs  lib.rs
love-quqnt/binance-ws-protobuf/: Cargo.toml  build.rs
love-quqnt/binance-ws-protobuf/proto/: market_data.proto
love-quqnt/binance-ws-protobuf/src/: main.rs
love-raft/openraft-memory/: .gitignore  Cargo.toml  README.md  build.rs
love-raft/openraft-memory/docs/: architecture.md  implementation_plan.md  questions.md  task.md  walkthrough.md
love-raft/openraft-memory/proto/: raft.proto  student.proto
love-raft/openraft-memory/src/: config.rs  lib.rs  main.rs  main_analysis.md  model.rs  tests.rs
love-raft/openraft-memory/src/api/: mod.rs  raft.rs  student.rs
love-raft/openraft-memory/src/network/: mod.rs
love-raft/openraft-memory/src/store/: mod.rs
love-raft/openraft-memory/tests/: cluster_test.rs  debug_api.rs  raft_test.rs  student_test.rs
love-raft/openraft/raft-kv-rocksdb/: Cargo.toml
love-raft/openraft/raft-kv-rocksdb/src/: lib.rs
love-raft/openraft/raft-kv-rocksdb/tests/cluster/: test_cluster.rs
love-reth/examples/example-custom-dev-node/: Cargo.toml
love-reth/examples/example-custom-dev-node/src/: main.rs
love-reth/examples/example-custom-evm/: Cargo.toml
love-reth/examples/example-custom-evm/docs/: note-1.md
love-reth/examples/example-custom-evm/src/: main.rs  practice_lib.rs
love-reth/examples/example-db-access/: Cargo.toml
love-reth/examples/example-db-access/src/: main.rs  mbdx_compress.rs  rlp_practice.rs
love-reth/examples/example-rpc-db/: .gitignore  Cargo.toml
love-reth/examples/example-rpc-db/src/: jsonrpc_http_practice.rs  jsonrpc_practice.rs  main.rs  myrpc_ext.rs
love-reth/notes/: _01_set_up_env_kit.md  _02_test_net_set_up.md  flood.sh
love-rust-web/hello-axum/: Cargo.toml
love-rust-web/hello-axum/src/: main.rs
