[package]
name = "fuck-rust-day-by-day"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
bytes = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

auto_impl = "1.3.0"

async-trait = "0.1"
anyhow = "1.0"
dashmap = "5.5"

smol_str = "0.2"

[dev-dependencies]
tokio-tungstenite = { version = "0.26", features = ["native-tls"] } # 用于连接 WSS
futures-util = "0.3" # 用于处理流 (Stream)