[package]
name = "hello-openraft"
version = "0.1.0"
edition = "2024"

[dependencies]
# 核心 Raft 算法库
openraft = { version = "0.9.13", features = ["serde"] }

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# 序列化与反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC 框架 (用于节点间通信和客户端接口)
tonic = "0.12"
prost = "0.13"

# REST 框架
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"

# 配置管理
config = "0.14"

# 类型定义与工具
async-trait = "0.1"
derive_more = { version = "1.0", features = ["full"] }

[build-dependencies]
# 用于编译 .proto 文件
tonic-build = "0.12"
