[package]
name = "example-custom-dev-node"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3", default-features = false }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }


reth-ethereum = { path = "/home/xyz-bits/projects/blockchain/ethereum/reth/crates/ethereum/reth", features = [
    "test-utils",
    "node",
] }

# alloy-genesis.workspace = true
alloy-genesis = { version = "1.1.3", default-features = false }

# alloy-primitives.workspace = true
alloy-primitives = { version = "1.5.0", default-features = false, features = [
    "map-foldhash",
] }


eyre = "0.6"
tokio = { version = "1.44.2", default-features = false }
