[package]
name = "example-custom-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
reth-ethereum = { path = "/home/xyz-bits/projects/blockchain/ethereum/reth/crates/ethereum/reth", features = [
    "test-utils",
    "node",
    "evm",
    "pool",
] }

# reth-tracing.workspace = true
reth-tracing = { path = "/home/xyz-bits/projects/blockchain/ethereum/reth/crates/tracing", default-features = false }

# alloy-evm.workspace = true
alloy-evm = { version = "0.25.1", default-features = false }

# alloy-genesis.workspace = true
alloy-genesis = { version = "1.1.3", default-features = false }

# alloy-primitives.workspace = true
alloy-primitives = { version = "1.5.0", default-features = false, features = [
    "map-foldhash",
] }


eyre = "0.6"
tokio = { version = "1.44.2", default-features = false }
