[package]
name = "example-db-access"
version = "0.1.0"
edition = "2024"

[dependencies]
# reth-ethereum = { version = "1.9.3", features = ["node"] }
# reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = ["node"] }
reth-ethereum = { path = "/home/xyz-bits/projects/blockchain/ethereum/reth/crates/ethereum/reth", features = ["node"] }

alloy-primitives = { version = "1.5.0", default-features = false, features = ["map-foldhash"] }


eyre = "0.6"


