[package]
name = "example-db-access"
version = "0.1.0"
edition = "2024"

[dependencies]
# reth-ethereum = { version = "1.9.3", features = ["node"] }
# reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = ["node"] }
reth-ethereum = { path = "/home/xyz-bits/projects/blockchain/ethereum/reth/crates/ethereum/reth", features = ["node"] }

alloy-primitives = { version = "1.5.0", default-features = false, features = ["map-foldhash"] }


eyre = "0.6"

[dev-dependencies]
alloy-rlp = {version = "0.3", features = ["derive"] }
hex = "0.4"
# 用于计算 keccak256
tiny-keccak = { version = "2.0", features = ["keccak"] }
prost = {version =  "0.14.1", features = ["derive"] }

# reth-codecs = { path = "/home/xyz-bits/projects/blockchain/ethereum/reth/crates/storage/codecs", features = ["derive"] }
# reth-codecs-derive = { path =  "/home/xyz-bits/projects/blockchain/ethereum/reth/crates/storage/codecs/derive" }

# bytes = "1.5"
